--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <title>Title here</title>
     <meta charset="UTF-8">
+    <meta name="description" content="This is a lab.">
     </head>
     <body>
     </body>
