automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Title here</title>
     <meta charset="UTF-8">
     <meta name="description" content="This is a lab.">
-    <meta keyword=
+    <meta name="keywords" content=
     </head>
     <body>
     </body>
