--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Title here</title>
     <meta charset="UTF-8">
     <meta name="description" content="This is a lab.">
-    <meta name="keywords" content="Words, sentences, paragraphs."
+    <meta name="keywords" content="Words, sentences, paragraphs">
     </head>
     <body>
     </body>
