automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="description" content="This is a lab.">
     <meta name="keywords" content="Words, sentences, paragraphs">
+    <meta name="author" content="Me">
     </head>
     <body>
     </body>
