--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="This is a lab.">
     <meta name="keywords" content="Words, sentences, paragraphs">
     <meta name="author" content="Me">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
     </body>
