--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
+      <link rel="stylesheet" type="text/css" href="style.css">
     </body>
 </html>
